2002-07-21  Jukka Pekka  <jiivonen@hutcs.cs.hut.fi>

	* dialog-random-generator.c (random_tool_ok_clicked_cb): Add
	Gaussian tail and Uniform integer distributions.

2002-07-21  Jukka Pekka  <jiivonen@hutcs.cs.hut.fi>

	* dialog-random-generator.c (distribution_parbox_config): Handle
	distributions having no parameters correctly.
	(random_tool_update_sensitivity_cb, random_tool_ok_clicked_cb):
	Added Landau distribution.

2002-07-21  Jody Goldberg <jody@gnome.org>

	* Release 1.1.6

2002-07-21  Jukka Pekka  <jiivonen@hutcs.cs.hut.fi>

	* dialog-random-generator.c (random_tool_ok_clicked_cb): Add
	Rayleigh tail distribution.

2002-07-21  Jukka Pekka  <jiivonen@cs145201.pp.htv.fi>

	* dialog-random-generator.c (random_tool_ok_clicked_cb): Add
	Exponential Power distribution.

2002-07-18  Jukka Pekka  <jiivonen@hutcs.cs.hut.fi>

	* dialog-random-generator.c (random_tool_update_sensitivity_cb,
	random_tool_ok_clicked_cb): Added Levy distribution.

2002-07-18  Jukka Pekka  <jiivonen@hutcs.cs.hut.fi>

	* dialog-random-generator.c (random_tool_update_sensitivity_cb,
	random_tool_ok_clicked_cb): Added Gamma, Geometric, Laplace,
	Logarithmic, Logistic, Lognormal, Pareto, Rayleigh, T, Type I
	Gumbel, and Type II Gumbel.

2002-07-18  Jukka Pekka  <jiivonen@hutcs.cs.hut.fi>

	* dialog-random-generator.c (random_tool_update_sensitivity_cb,
	random_tool_ok_clicked_cb): Added Beta, Cauchy, Chi-Squared, F,
	and Weibull distributions.

2002-06-21  Andreas J. Guelzow <aguelzow@taliesin.ca>

	* tool-dialogs.h (dialog_tool_init) : new
	* dialog-advanced-filter.c (dialog_histogram_tool_init) : deleted
	(dialog_histogram_tool) : use dialog_tool_init
	* dialog-random-generator.c (dialog_random_tool_init) : remove code duplicated
	  in dialog_tool_init
	(dialog_random_tool) : use dialog_tool_init
	* dialog-analysis-tools.c : use improved dialog_tool_init in all dialog...tool
	(dialog_tool_cmp) : new
	(dialog_tool_init) : generalize and initial more fields
