@@ -1,3 +1,7 @@
+2002-07-26  Jukka Pekka  <jiivonen@hutcs.cs.hut.fi>
+
+	* advanced-filter.glade: Made in-place filtering the default.
+
 2002-07-21  Jukka Pekka  <jiivonen@hutcs.cs.hut.fi>
 
 	* dialog-random-generator.c (random_tool_ok_clicked_cb): Add
